# AOCC2022

./: .gitignore  CMakeLists.txt  README.md
days/: day1_1.h  day1_2.c  day1_2.h
days/day01/: day1_1.c  day1_2.c
days/day02/: day2_1.c  day2_2.c
days/day03/: day3_1.c  day3_2.c
days/day04/: day4_1.c  day4_2.c  testInput_day4.txt
days/day05/: day5_1.c  day5_2.c
days/day06/: day6_1.c  day6_2.c
days/day07/: day7_1.c  day7_2.c  day7_functions.c  day7_functions.h
days/day08/: day8_1.c  day8_2.c
days/day09/: day9_1.c  day9_2.c  day9_functions.c  day9_functions.h
days/day1/: day1_1.c  day1_2.c
days/day10/: day10_1.c  day10_1.h  day10_2.c  day10_2.h
days/day11/: day11_1.c  day11_1.h  day11_2.c  day11_2.h  day11_functions.c  day11_functions.h  testInput_day11.txt
days/day12/: day12_1.c  day12_2.c
days/day13/: day13_1.c  day13_2.c  day13_functions.c  day13_functions.h
days/day14/: day14_1.c  day14_2.c  day14_functions.c  day14_functions.h
days/day15/: day15_1.c  day15_2.c  day15_functions.c  day15_functions.h
days/day16/: day16_1.c  day16_2.c  day16_functions.c  day16_functions.h
days/day17/: day17_1.c  day17_2.c  day17_functions.c  day17_functions.h
days/day18/: day18_1.c  day18_2.c  day18_functions.c  day18_functions.h
days/day19/: day19_1.c  day19_2.c
days/day2/: day2_1.c  day2_1.h  day2_2.c  day2_2.h
days/day20/: day20_1.c  day20_2.c
days/day21/: day21_1.c  day21_2.c
days/day22/: day22_1.c  day22_2.c
days/day23/: day23_1.c  day23_2.c
days/day24/: day24_1.c  day24_2.c
days/day25/: day25_1.c
days/day3/: day3_1.c  day3_1.h  day3_2.c  day3_2.h
days/day4/: day4_1.c  day4_1.h  day4_2.c  day4_2.h
days/day5/: day5_1.c  day5_1.h  day5_2.c  day5_2.h
days/day6/: day6_1.c  day6_1.h  day6_2.c  day6_2.h
days/day7/: day7_1.c  day7_1.h  day7_2.c  day7_2.h  day7_extra.c  day7_functions.c  day7_functions.h
days/day8/: day8_1.c  day8_1.h  day8_2.c  day8_2.h
days/day9/: day9_1.c  day9_1.h  day9_2.c  day9_2.h  day9_functions.c  day9_functions.h
inputs/: input_day11.txt  testInput_day4.txt
